kubedefs/dbdeploy.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: vprodb
  labels:
    app: vprodb
spec:
  replicas: 1
  selector:
    matchLabels:
     app: vprodb
    template:
      metadata:
       labels:
        app: vprodb
    spec:
      conatiners:
       - name: vprodb
         image: tkirar/vprofile-project-vprodb
         volumeMounts:
           - mountPath: /var/lib/mysql
             name: vpro-db-data
             ports:
             - name: vprodb-port
               containerPort: 3306
      volumes:
       - name: vpro-db-data
         persistentVolumeClaim:
          claimName: db-pv-claim
      

      initcontainers:
       - name: busybox
         image: busybox:latest
         args: ["rm", "-rf", "/var/lib/mysql/*"]
         volumeMounts:
         - mountPath: /var/lib/mysql
           name: vpro-db-data
