kubedefs/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01
spec:
  selector:
    app: vprocache01
  ports:
    - name: vprocache01-port
      port: 11211
      targetPort: vpromc-port
      protocol: TCP
  type: ClusterIP
