kubedefs/appingress.yaml
apiVersion: api.networking.k8s.io/v1
kind: Ingress
metadata:
  name: vproapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: vproapp.cloudgenie.online
    http:
      paths:
      - path: /
        backend:
          service:
            name: vproapp-service
            port:
              number: 8080
